--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.8
   http: ^0.13.4
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
