--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   shared_preferences: ^2.0.8
   http: ^0.13.4
   cached_network_image: ^3.1.0
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
