--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hall_of_fame">
-   <application
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <application
         android:label="Hall of Fame"
         android:icon="@mipmap/ic_launcher">
         <activity
