--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: ^2.0.8
   http: ^0.13.4
-  cached_network_image: ^3.1.0
   provider: ^6.0.1
+  shared_preferences: ^2.0.8
+  cached_network_image: ^3.1.0
+  flutter_staggered_grid_view: ^0.4.1
 
 dev_dependencies:
   flutter_test:
