--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   shared_preferences: ^2.0.8
   cached_network_image: ^3.1.0
   flutter_staggered_grid_view: ^0.4.1
+  path_provider: ^2.0.5
+  share_plus: ^3.0.4
 
 dev_dependencies:
   flutter_test:
