chore(ci): update gh-actions script

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,22 +1,75 @@
 name: Build and Deploy
 on: [push]
+
+# on: 
+#   push:
+#     tags:
+#       - '*'
+
 jobs:
-  build-and-deploy:
+  linux_android_web:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.1
-
-      - name: Flutter
-        uses: subosito/flutter-action@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
         with:
           flutter-version: '2.5.2'
-
       - run: flutter pub get
+      - run: flutter config --enable-linux-desktop
+      - run: flutter build apk
+      - run: flutter build linux
       - run: flutter build web
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.5
+      - uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: build/web # The folder the action should deploy.
+      - uses: actions/upload-artifact@v2
+        with:
+          name: android-release.apk
+          path: build/app/outputs/flutter_apk/app-release.apk
+      - uses: actions/upload-artifact@v2
+        with:
+          name: linux
+          path: build/linux/
+      - uses: actions/upload-artifact@v2
+        with:
+          name: web
+          path: build/web/
+
+
+  windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.5.2'
+      - run: flutter config --enable-windows-desktop
+      - run: flutter build windows
+      - uses: actions/upload-artifact@v2
+        with:
+          name: windows
+          path: build/windows/
+
+  apple:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: subosito/flutter-action@v1
+      with:
+        flutter-version: '2.5.2'
+    - run: flutter config --enable-macos-desktop
+    - run: flutter pub get
+    - run: flutter build ios --release --no-codesign
+    - run: flutter build macos
+    - uses: actions/upload-artifact@v2
+      with:
+        name: ios.app
+        path: build/ios/iphoneos/Runner.app
+    - uses: actions/upload-artifact@v2
+      with:
+        name: macos
+        path: build/macos/Build/Products/Release/hall_of_fame.app
