--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,8 @@ jobs:
       - run: flutter pub get
       - run: flutter config --enable-linux-desktop
       - run: flutter doctor -v
-      - run: sudo apt install ninja-build
+      - run: sudo apt install -y ninja-build
+      - run: sudo apt install -y libgtk-3-dev
       - run: flutter doctor -v
       - run: flutter build linux
   
