--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,38 +7,6 @@ on: [push]
 #       - '*'
 
 jobs:
-  linux:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: '2.5.2'
-      - run: sudo apt install -y ninja-build
-      - run: sudo apt install -y libgtk-3-dev
-      - run: flutter pub get
-      - run: flutter config --enable-linux-desktop
-      - run: flutter build linux
-      - uses: actions/upload-artifact@v2
-        with:
-          name: linux
-          path: build/linux/
-
-  android:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      # - uses: seanmiddleditch/gha-setup-ninja@master
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: '2.5.2'
-      - run: flutter pub get
-      - run: flutter build apk
-      - uses: actions/upload-artifact@v2
-        with:
-          name: android-release.apk
-          path: build/app/outputs/flutter-apk/app-release.apk
-
   macos:
     runs-on: macos-latest
     steps:
@@ -49,55 +17,9 @@ jobs:
     - run: flutter config --enable-macos-desktop
     - run: flutter pub get
     - run: flutter build macos
+    - run: cd build/macos/Build/Products/Release && ls -l
     - uses: actions/upload-artifact@v2
       with:
         name: macos.app
         path: build/macos/Build/Products/Release/hall_of_fame.app
-
-  ios:
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: subosito/flutter-action@v1
-      with:
-        flutter-version: '2.5.2'
-    - run: flutter pub get
-    - run: flutter build ios --release --no-codesign
-    - uses: actions/upload-artifact@v2
-      with:
-        name: ios.app
-        path: build/ios/iphoneos/Runner.app
-
-  windows:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: '2.5.2'
-      - run: flutter config --enable-windows-desktop
-      - run: flutter build windows
-      - uses: actions/upload-artifact@v2
-        with:
-          name: windows
-          path: build/windows/
-          
-  web:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: '2.5.2'
-      - run: flutter pub get
-      - run: flutter build web
-      - uses: JamesIves/github-pages-deploy-action@4.1.5
-        with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: build/web # The folder the action should deploy.
-      - uses: actions/upload-artifact@v2
-        with:
-          name: web
-          path: build/web/
-
 
