--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,8 +21,8 @@ jobs:
       - run: flutter build linux
       - uses: actions/upload-artifact@v2
         with:
-          name: linux
-          path: build/linux/
+          name: linux_x64
+          path: build/linux/x64/release/bundle
 
   android:
     runs-on: ubuntu-latest
@@ -38,7 +38,7 @@ jobs:
       - run: flutter build apk
       - uses: actions/upload-artifact@v2
         with:
-          name: android-release.apk
+          name: android
           path: build/app/outputs/flutter-apk/app-release.apk
 
   macos:
@@ -53,7 +53,7 @@ jobs:
     - run: flutter build macos
     - uses: actions/upload-artifact@v2
       with:
-        name: macos.app
+        name: macos
         path: build/macos/Build/Products/Release/Hall of Fame.app
 
   ios:
@@ -67,7 +67,7 @@ jobs:
     - run: flutter build ios --release --no-codesign
     - uses: actions/upload-artifact@v2
       with:
-        name: ios.app
+        name: ios
         path: build/ios/iphoneos/Runner.app
 
   windows:
@@ -82,7 +82,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: windows
-          path: build/windows/
+          path: build/windows/runner/Release
           
   web:
     runs-on: ubuntu-latest
