chore(ci): update upload artifact

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,11 +35,11 @@ jobs:
         with:
           flutter-version: '2.5.2'
       - run: flutter pub get
-      - run: flutter build apk
+      - run: flutter build apk --split-per-abi
       - uses: actions/upload-artifact@v2
         with:
-          name: android-release.apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+          name: android
+          path: build/app/outputs/flutter-apk/
 
   macos:
     runs-on: macos-latest
@@ -53,7 +53,7 @@ jobs:
     - run: flutter build macos
     - uses: actions/upload-artifact@v2
       with:
-        name: macos.app
+        name: macos
         path: build/macos/Build/Products/Release/Hall of Fame.app
 
   ios:
@@ -67,7 +67,7 @@ jobs:
     - run: flutter build ios --release --no-codesign
     - uses: actions/upload-artifact@v2
       with:
-        name: ios.app
+        name: ios
         path: build/ios/iphoneos/Runner.app
 
   windows:
