--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.1
   path_provider: ^2.0.5
   share_plus: ^4.0.3
+  settings_ui: ^2.0.2
 
 dev_dependencies:
   flutter_test:
