chore(ci): update windows artifact path

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -79,7 +79,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: windows
-          path: build/windows/
+          path: build/windows/runner/Release
           
   web:
     runs-on: ubuntu-latest
