chore(ci): update linux artifact path

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: linux
-          path: build/linux/
+          path: build/linux/x64/release/bundle
 
   android:
     runs-on: ubuntu-latest
