--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = Hall of Fame
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.hall_of_fame
+PRODUCT_BUNDLE_IDENTIFIER = com.redrock.hall_of_fame
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2021 com.example. All rights reserved.
