--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: 0.13.4
-  provider: 6.0.3
-  shared_preferences: 2.0.15
-  cached_network_image: 3.2.1
-  flutter_staggered_grid_view: 0.6.1
-  path_provider: 2.0.11
-  share_plus: 4.0.8
+  http: 1.5.0
+  provider: 6.1.5+1
+  shared_preferences: 2.5.3
+  cached_network_image: 3.4.1
+  flutter_staggered_grid_view: 0.7.0
+  path_provider: 2.1.5
+  share_plus: 12.0.1
   settings_ui: 2.0.2
-  url_launcher: 6.1.3
+  url_launcher: 6.3.2
 
 dev_dependencies:
   flutter_test:
