--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,9 +23,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v5
         with:
-          java-version: '12.x'
+          distribution: 'temurin'
+          java-version: '21'
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.35.7'
